--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
   "homepage": "https://github.com/youyoumu/tagtag#readme",
   "dependencies": {
     "express": "^4.19.2"
-  }
+  },
+  "type": "module"
 }
