--- a/package.json
+++ b/package.json
@@ -17,19 +17,24 @@
   },
   "homepage": "https://github.com/youyoumu/tagtag#readme",
   "dependencies": {
+    "@prisma/client": "^5.15.0",
     "express": "^4.19.2"
   },
   "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.4.0",
     "@types/eslint__js": "^8.42.3",
+    "@types/node": "^20.14.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.2.0",
+    "globals": "^15.4.0",
     "prettier": "3.3.2",
+    "prisma": "^5.15.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.0"
   }
