--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@eslint/js": "^9.4.0",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
