--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@prisma/client": "^5.15.0",
     "body-parser": "^1.20.2",
+    "discord-interactions": "^4.0.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "tsx": "^4.15.5"
