--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.0.7",
     "tsx": "^4.15.5"
   },
   "type": "module",
