--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@prisma/client": "^5.15.0",
     "body-parser": "^1.20.2",
+    "dayjs": "^1.11.11",
     "discord-interactions": "^4.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
